assets/css/style.css
/* header */

#logo {
    padding: 0;
    margin: 0;
    padding-top: 10px;
    padding-left: 10px;
    letter-spacing: 5px;
    font-size: 40px;
}

#logo a {
    color: #4a4a4a;
    text-decoration: none;
}

.icon {
    display: none;
}

header {
    width: 100%;
    display: flex;
    justify-content: space-between;
    font-family: Bebas Neue, sans-serif;
    flex-wrap: wrap;
}

nav ul{
    width: 50vw;
    display: flex;
    justify-content: space-between;
    padding: 0;
    flex-wrap: wrap;
}

nav ul li {
    list-style-type: none;

}

nav li a {
    text-decoration: none;
    color: #4a4a4a;
    font-size: 30px;
    transition: 0.5s;
    justify-content: space-between;
}

nav li a:hover {
    background-color: #AE1F2B;
    padding: 0 10px;
    border-radius: 5px;
    color: white;
    font-size: 31px;
}

/* about */

#about-img {
    background: url(../images/Red-keyboard-dark.JPEG);
    background-size: cover;
    padding: 0;
    margin: 0;
    width: 100%;
    height: 500px;
    overflow: hidden;
    display: flex;
    justify-content: space-between;
}

#info1 {
    width: 30%;
    padding-left: 15px;
    color: white;
    font-family:source serif pro, sans-serif;
}

#info2 {
    width: 30vw;
    padding-right: 15px;
    color: white;
    font-family:source serif pro, sans-serif;
    bottom: 8px;
    right: 10px;
    align-self: flex-end;
}

#about h2 {  
    font-family: bebas neue, sans-serif;
    font-size: 30px;
    letter-spacing: 10px;
}

/* event info */

#tickets-logo {
    display: flex;
    font-family: bebas neue, sans-serif;
    color: #4a4a4a;
    letter-spacing: 5px;
    font-size: 40px;
    width: 100%;
    padding-bottom: 50px;
}

#event-info {
    display: flex;
    width: 100%;
    flex-wrap:wrap;
    justify-content: center;
}

#event-info-list {
    width: 100%;
    list-style-type: none;
    padding: 0;
}

.textbox { 
    width: 400px;
    text-align: center;
    font-family:source serif pro, sans-serif;
    font-size: 30px;
    color: #4a4a4a;
}

.textbox h3 {
    font-family: bebas neue, sans-serif;
    font-size: 30px;
    letter-spacing: 10px;
}

.textbox hr {
    width: 95%;
}

#even-info-list li{
    list-style: none;
    height: 100px;
}

#ticket-button {
    display: flex;
    justify-content: center;
    align-items: center;
}

#ticket-button a {
    text-decoration: none;
    background-color: #AE1F2B;
    padding: 25px 50px;
    border-radius: 5px;
    color: white;
    transition: 0.5s;

    font-family: bebas neue, sans-serif;
    font-size: 30px;
    letter-spacing: 10px;
}

#ticket-button a:hover {
    text-decoration: none;
    color: #4a4a4a;
    background-color: #fff4ea;
    border: 1px #4a4a4a solid;
}

#vid {
    text-align: center;
    font-family: bebas neue, sans-serif;
    color: #4a4a4a;
    letter-spacing: 5px;
    font-size: 20px;

}

iframe {
    width: 600px;
    height: 400px;
}

/* stay */

#stay {
    width: 100%;
}

#stay-logo {
    display: flex;
    font-family: bebas neue, sans-serif;
    color: #4a4a4a;
    letter-spacing: 5px;
    font-size: 40px;
    width: 100%;
    padding-bottom: 50px;
}

#stay h3 {
    color: #4a4a4a;
}

#view-rooms a {
    text-decoration: none;
    background-color: #AE1F2B;
    padding: 25px 50px;
    border-radius: 5px;
    color: white;
    transition: 0.5s;

    font-family: bebas neue, sans-serif;
    font-size: 30px;
    letter-spacing: 10px;
}

.hotels {
    color: #4a4a4a;
}

.hotels h2, h3 {
    font-family: bebas neue, sans-serif;
    letter-spacing: 5px;
    font-size: 30px;
}

#grand-hyatt-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#grand-hyatt  {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

#grand-hyatt h2, #grand-hyatt hr {
    width: 100%;
}

#grand-hyatt img {
    width: 600px;
}

#grand-hyatt p {
    text-align: center;
    width: 600px;
    font-family: source serif pro, sans-serif;
    font-size: 30px;
    word-spacing: 5px;
    line-height: 50px;
}

#view-rooms {
    width: 400px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    letter-spacing: 5px;
    font-size: 40px;
}

#view-rooms h2 {
    text-align: center;
}

#view-rooms a {
    text-decoration: none;
    background-color: #AE1F2B;
    padding: 25px 50px;
    border-radius: 5px;
    color: white;
    transition: 0.5s;
}

#view-rooms a:hover {
    text-decoration: none;
    color: #4a4a4a;
    background-color: #fff4ea;
    border: 1px #4a4a4a solid;
}

#walking-distance {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.walking-distance img {
    width: 600px;
}

.uber img {
    height: 450px;
    width: 600px;
}

#uber {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}


/* sign up */

#sign-up {
    color: #4a4a4a;
    width: 100%;
}

#sign-up-logo {
    font-family: bebas neue, sans-serif;
    color: #4a4a4a;
    letter-spacing: 5px;
    font-size: 40px;
    width: 100%;
}

#sign-up-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#sign-up img {
    width: 800px;
}

#data-input-container {
    width: 800px;
    display: flex;
    justify-content: center;
    text-align: center;    
}

#data-input {
    display: inline-block;
}

.data-input {
    width: 500px;
    height: 50px;
    background-color: #fff4ea;
    text-align: center;
    border-radius: 0;
    border-style: none;
    font-size: 30px;
    font-family: bebas neue, sans-serif;
    margin-top: 30px;
}

#sign-up-button {
    background-color: #AE1F2B;
    color: white;
    transition: 0.5s;
}

#sign-up-button:hover {
    border: 1px solid black;
    background-color: white;
    color: #4a4a4a;
    cursor: pointer;
}

/* contact */

footer {
    color: #4a4a4a;
    text-align: center;
    font-family: bebas neue, sans-serif;
    font-size: 32px;
    letter-spacing: 2px;
    height: 500px;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

#contact-logo {
    padding-top: 50px;
    color: #4a4a4a;
    letter-spacing: 5px;
    font-size: 40px;
    width: 100%;
    padding: 0;
    height: 50px;
    margin: 0;
}

#social-media-links a {
    color: #4a4a4a;
    padding: 0 15px;
    transition: 0.5s;
    padding-bottom: 50px;
}

#social-media-links a:hover {
    font-size: 50px;
}

@media (max-width:818px) {
    #sign-up img {
        width: 100%;
    }
}

@media (max-width:633px) {
    iframe {
        width: 100%;
    }
}

@media (max-width: 620px){
    .walking-distance img {
        width: 100%;
    }
    
    .uber img {
        width: 100%;
        height: auto;
    }

    #grand-hyatt img {
        width: 100%;
    }

}

@media only screen and (max-width:600px) {

    * {
        text-align: center;
    }

    .icon {
        padding-top: 10px;
        display: block;
        font-size: 40px;
        overflow: hidden;
        color: #4a4a4a;
        text-align: right;
    }

    .navbar {
        display: none;
        width: 100%;
        position: relative;  
        order: 3;    
    }

    .navbar-responsive {
        display: block;
        width: 100%;
        position: relative;  
        order: 3; 
    }
    
    .nav-menu {
        display: block;
        width: 100%;
    }

    #about-img {
        display: block;
        width: 100%;
    }

    #about h2 {
        padding: 0;
        margin: 0;
        font-size: 30px;
        letter-spacing: 0;
    }

    #info1, #info2 {
        display: block;
        width: 100%;
        padding: 0;
        margin: 0;
    }

    #grand-hyatt p {
        width: 100%;
    }

    .data-input {
        width: 100%;
    }

    footer {
        padding-top: 30px;
        height: auto;
    }

    #social-media-links a:hover { 
        font-size: 32px;
    }
}

